--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         /* set the grid to repeat 21 times and all be evenly split with 1fr */
         grid-template-rows: repeat(21,1fr);
         grid-template-columns: repeat(21,1fr);
-
     }
-
+    .grid {
+        border: .25vmin solid #bbb;
+    }
     .snake {
         background-color: hsl(200,100%,50%);
         /* sets border to scale based on window size's smallest measurement */
@@ -36,6 +37,7 @@
     }
     .food {
         background-color: hsl(50,100%,50%);
+        border: .25vmin solid black;
 
     }
 </style>
