fix: set css on body to hide y overflow
this is what actually fixed the pull to refresh. the touchmove stop
propagation may also have had a hand in it but commiting this was the
one that actually stopped it.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         align-items: center;
         margin: 0;
         background-color: black;
+	overflow-y: hidden;
     }
 
     #game-board{
